# faces_in_the_cloud

./: README
source/: CMakeLists.txt  aws.cpp  aws.h  cvdb.py  db.py  image.cpp  image.h  main.cpp  scheduler.py  yale.cpp  yale.h
